remove deprecated get-locked-fee-credit and get-closed-fee-credit functionality from money and token backends
