# pkg/wallet/swagger/openapi_tokens.yaml
@@ -270,27 +270,6 @@ paths:
                 $ref: 'components.yaml#/schemas/ErrorResponse'
         default:
           $ref: 'components.yaml#/responses/ErrorResponse'
-  /closed-fee-credit/{unitId}:
-    get:
-      summary: Get the last seen closeFC transaction for the given fee credit bill
-      description: Get the last seen closeFC transaction for the given fee credit bill
-      parameters:
-        - name: unitId
-          description: Target fee credit bill ID (hex)
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        '200':
-          description: Successful operation
-          content:
-            application/cbor:
-              schema:
-                type: string
-                format: binary
-        default:
-          $ref: 'components.yaml#/responses/ErrorResponse'
   /transactions/{pubkey}:
     post:
       summary: Forward transactions to partition node
